--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=CadastroDeNinjas
+
+
+#Configurações H2
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSSWORD}
+spring.h2.console.enabled=true
+
+#Configurações do JPA // HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.h2.console.enable=true
