--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,9 @@ spring.h2.console.enabled=true
 #Configurações do JPA // HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enable=true
+spriFFng.h2.console.enable=true
+
+#Configurar o flyway
+spring.flyway.enable = true
+spring.flyway.locations = classpath:db.migrations
+spring.flyway.baseline-on-migrate= true
