--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.show-sql=true
 spriFFng.h2.console.enable=true
 
 #Configurar o flyway
-spring.flyway.enable = true
-spring.flyway.locations = classpath:db.migrations
-spring.flyway.baseline-on-migrate= true
+spring.flyway.enable=true
+spring.flyway.locations=classpath:db.migrations
+spring.flyway.baseline-on-migrate=true
+
+#Configuração do Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
