feat: Cria Mapper e altera o Dto para o criar ninja, mas ainda incompleto

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<version>1.18.30</version> <!-- Substitua pela versão mais recente -->
+			<scope>provided</scope>
+
 		</dependency>
 
 		<dependency>
