--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,20 @@
 spring.application.name=CadastroDeNinjas
 
 
-#Configurações H2
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSSWORD}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.h2.console.enabled=true
 
-#Configurações do JPA // HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spriFFng.h2.console.enable=true
 
-#Configurar o flyway
-spring.flyway.enable=true
-spring.flyway.locations=classpath:db.migrations
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
 
-#Configuração do Swagger
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
