--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=CadastroDeNinjas
 
 
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:h2:file:./data/NinjasBD;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.username=Ninja_bd
+spring.datasource.password=admin
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
